fixed the extra space at the top

--- a/style/style.css
+++ b/style/style.css
@@ -1,25 +1,41 @@
-#intro {
-  margin: auto;
-  width: auto;
-  height: 400px;
-  border: 1px solid;
-  background: rgb(43, 137, 226);
-  text-align: center;
-}
-
-ul {
-  list-style-type: none;
+* {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #333;
 }
 
-li {
-  float: right;
+.nav-list {
+  display: flex;
+  margin-right: 2rem;
 }
+
+.introDiv {
+  height: 400px;
+  background: goldenrod;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#textDiv {
+  height: 100px;
+}
+
+ul {
+  list-style: none;
+}
+
 li a {
-  display: block;
+  display: flex;
   color: white;
   text-align: center;
   padding: 14px 16px;
